--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -6,7 +6,7 @@
 @black:rgb(38, 38, 38);
 @blue:rgb(0, 53, 105);
 @linkcolor: #999;
-@linkcoloractive: #0035679;
+@linkcoloractive: #003567;
 
 @fontsizedefault:14px;
 @fontsizebig:28px;
@@ -14,9 +14,13 @@
 
 
 @transtime:0.3s;
+@transtimeslow:0.5s;
 
-@hoverbgcolorl:linear-gradient(30deg,#f96,#ace);
+//@hoverbgcolorl:linear-gradient(30deg,#f96,#ace);
+@hoverbgcolorl:linear-gradient(left,#f96,#ace);
 @hoverbgcolorr:radial-gradient(#f96,#ace);
+//@hoverbgcolorl:linear-gradient(30deg,#fafafa,#262626);
+//@hoverbgcolorr:radial-gradient(#fafafa,#262626);
 
 *{
   padding: 0;
@@ -45,3 +49,5 @@
     float: left;
   }
 }
+
+//reset.css
