修改样式及登录

--- a/src/assets/common.less
+++ b/src/assets/common.less
@@ -1,5 +1,6 @@
 @bgcolor:#fafafa;
-@white:#fff;
+// @white:#fff;
+@white:rgba(255,255,255,0.3);
 
 @bordercolor:rgba(0,0,0,.0975);
 
@@ -17,10 +18,12 @@
 @transtimeslow:0.5s;
 
 //@hoverbgcolorl:linear-gradient(30deg,#f96,#ace);
-@hoverbgcolorl:linear-gradient(left,#f96,#ace);
-@hoverbgcolorr:radial-gradient(#f96,#ace);
+// @hoverbgcolorl:linear-gradient(left,#f96,#ace);
+// @hoverbgcolorr:radial-gradient(#f96,#ace);
 //@hoverbgcolorl:linear-gradient(30deg,#fafafa,#262626);
 //@hoverbgcolorr:radial-gradient(#fafafa,#262626);
+@hoverbgcolorl:linear-gradient(left,#C1D7E4,#294666);
+@hoverbgcolorr:radial-gradient(#294666,#C1D7E4);
 
 *{
   padding: 0;
